# Impact

./: .gitignore  Cargo.toml  Makefile  README.md  index.html  todo.md
apps/basic_app/: .gitignore  Cargo.toml  Makefile  build.roc  deny.toml  fuzz.sh  run.sh  run_debug.sh  run_debug_asan.sh  run_debug_cranelift.sh  run_dhat_profiling.sh  run_heaptrack_profiling.sh  run_jemalloc_profiling.sh  run_perf_profiling.sh  run_roc_debug.sh  run_tracy_profiling.sh
apps/basic_app/cli/: Cargo.toml
apps/basic_app/config/: assets.ron  config.ron  config_no_assets.ron  default_voxel_type.ron  engine_config.ron  engine_config_no_assets.ron  keymap.ron  resources.ron  ui_config.ron  voxel_types.ron
apps/basic_app/roc_platform/: Cargo.toml
apps/basic_app/scripts/: KeyboardInputHandling.roc  TestScene.roc  main.roc
apps/basic_app/src/: api.rs  command.rs  lib.rs  scripting.rs  ui.rs  user_interface.rs
apps/voxel_generator/: Cargo.toml  Makefile  deny.toml
apps/voxel_generator/cli/: Cargo.toml
apps/voxel_generator/config/: config.ron  engine_config.ron  resources.ron  voxel_types.ron
apps/voxel_generator/examples/: asteroid.graph.ron  asteroid_base.subgraph.ron  big_craters.subgraph.ron  medium_craters.subgraph.ron  small_craters.subgraph.ron
apps/voxel_generator/roc_platform/: Cargo.toml
apps/voxel_generator/scripts/: Scene.roc  main.roc
apps/voxel_generator/src/: api.rs  editor.rs  interface.rs  lib.rs  scripting.rs  user_interface.rs
engine/: .gitignore  Cargo.toml  deny.toml  todo.md
engine/Jenkins/: Jenkinsfile
engine/benches/: bvh.rs  constraint.rs  delaunay.rs  generation.rs  isometry.rs  lookup_table.rs  matrix.rs  model.rs  quaternion.rs  sorting.rs  tesselation.rs  vector.rs  voxel.rs  voxel_object.rs
engine/benches/data/: asteroid.vgen.ron
engine/crates/: Cargo.toml
engine/crates/impact_alloc/: Cargo.toml
engine/crates/impact_assets/: Cargo.toml
engine/crates/impact_camera/: Cargo.toml
engine/crates/impact_containers/: Cargo.toml
engine/crates/impact_controller/: Cargo.toml
engine/crates/impact_dev_ui/: Cargo.toml
engine/crates/impact_ecs/: Cargo.toml
engine/crates/impact_geometry/: Cargo.toml
engine/crates/impact_gizmo/: Cargo.toml
engine/crates/impact_gpu/: Cargo.toml
engine/crates/impact_id/: Cargo.toml
engine/crates/impact_intersection/: Cargo.toml
engine/crates/impact_io/: Cargo.toml
engine/crates/impact_light/: Cargo.toml
engine/crates/impact_material/: Cargo.toml
engine/crates/impact_math/: Cargo.toml
engine/crates/impact_mesh/: Cargo.toml
engine/crates/impact_model/: Cargo.toml
engine/crates/impact_physics/: Cargo.toml
engine/crates/impact_profiling/: Cargo.toml  tracy.md
engine/crates/impact_rendering/: Cargo.toml
engine/crates/impact_resource/: Cargo.toml
engine/crates/impact_scene/: Cargo.toml
engine/crates/impact_scheduling/: Cargo.toml
engine/crates/impact_tesselation/: Cargo.toml
engine/crates/impact_texture/: Cargo.toml
engine/crates/impact_thread/: Cargo.toml
engine/crates/impact_voxel/: Cargo.toml  build.rs
engine/fuzz/: Cargo.toml
engine/fuzz/fuzz_targets/: obtaining_voxels_within_sphere.rs  voxel_object_generation.rs
engine/impact_camera/: Cargo.toml
engine/impact_camera/src/: buffer.rs  lib.rs  macros.rs  setup.rs
engine/impact_containers/: Cargo.toml
engine/impact_containers/src/: generational_reusing_vec.rs  key_index_mapper.rs  lib.rs
engine/impact_dev_ui/: Cargo.toml
engine/impact_dev_ui/src/: command.rs  lib.rs  option_panels.rs  time_overlay.rs  timing_panels.rs  toolbar.rs
engine/impact_ecs/: Cargo.toml
engine/impact_ecs/benches/: query.rs  world.rs
engine/impact_ecs/impact_ecs_macros/: Cargo.toml
engine/impact_ecs/src/: archetype.rs  component.rs  entity.rs  lib.rs  profiling.rs  world.rs
engine/impact_ecs/tests/: query.rs  setup.rs
engine/impact_geometry/: Cargo.toml
engine/impact_geometry/src/: angle.rs  (+5 more)
engine/impact_gpu/: Cargo.toml
engine/impact_light/: Cargo.toml
engine/impact_log/: Cargo.toml
engine/impact_material/: Cargo.toml
engine/impact_math/: Cargo.toml
engine/impact_mesh/: Cargo.toml
engine/impact_model/: Cargo.toml
engine/impact_profiling/: Cargo.toml
engine/impact_rendering/: Cargo.toml
engine/impact_scene/: Cargo.toml
engine/impact_scheduling/: Cargo.toml
engine/impact_utils/: Cargo.toml
engine/notebooks/: drag.jl  fracturing.jl
engine/profiling/: heaptrack.sh  hotspot.sh  perf_record.sh  perf_stat.sh  samply_record.sh  valgrind.sh  vtune.sh
engine/roc_codegen/: Cargo.toml
engine/src/: alloc.rs  application.rs  assets.rs  benchmark.rs  camera.rs  command.rs  component.rs  control.rs  engine.rs  ffi.rs  game_loop.rs  geometry.rs  gizmo.rs  gpu.rs  input.rs  instrumentation.rs  io.rs  lib.rs  light.rs  lock_order.rs  lockable_resources.rs  macros.rs  material.rs  mesh.rs  model.rs  physics.rs  profiling.rs  rendering.rs  resource.rs  run.rs  runtime.rs  scene.rs  scheduling.rs  scripting.rs  setup.rs  skybox.rs  tasks.rs  thread.rs  ui.rs  util.rs  (+2 more)
engine/tests/: constraint.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: split_off_disconnected_voxel_object_region.rs  voxel_object_absorbing_voxels_within_sphere.rs  voxel_object_connected_regions.rs  voxel_object_generation.rs
impact_ecs/: Cargo.toml
impact_ecs/impact_ecs_derive/: Cargo.toml
impact_ecs/impact_ecs_macros/: Cargo.toml
impact_ecs/src/: archetype.rs  component.rs  lib.rs  query.rs  util.rs  world.rs
impact_ecs/tests/: prepare.rs  query.rs  setup.rs
impact_roc/: .gitignore  Cargo.toml  build.roc
impact_roc/platform/: Host.roc  Impact.roc  Rosetta.roc  Stdout.roc  Vector3.roc  Vector4.roc  libapp.roc  main.roc
impact_roc/tests/: TestRosetta.roc
roc_codegen/: Cargo.toml  build.rs
roc_codegen/roc_codegen_macros/: Cargo.toml
roc_codegen/src/: generate.rs  ir.rs  lib.rs  meta.rs  primitives.rs  roc.rs
roc_integration/: Cargo.toml  build.rs  deny.toml
roc_integration/roc_integration_macros/: Cargo.toml
roc_integration/src/: generate.rs  ir.rs  lib.rs  primitives.rs  utils.rs
tools/asset_fetcher/: Cargo.toml  deny.toml
(+2699 files in other folders)
