[package]
name = "impact"
version = "0.1.0"
edition = "2021"
default-run = "impact"

build = "build.rs"

[workspace]
members = ["impact_utils", "impact_ecs", "impact_ecs/impact_ecs_macros"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
profiling = ["dep:clap"]
fuzzing = ["dep:arbitrary"]
unchecked = []

[dependencies]
anyhow = "1.0"
approx = "0.5"
arbitrary = { version = "1.3", features = ["derive"], optional = true }
atomic_enum = "0.3"
bitflags = { version = "2.6", features = ["bytemuck"] }
bytemuck = { version = "1.17", features = ["derive"] }
cfg-if = "1.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"], optional = true }
env_logger = "0.11"
glam = "0.29"
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
half = { version = "2.1", features = ["bytemuck"] }
lazy_static = "1.5"
log = "0.4"
naga = { version = "22.1", features = ["wgsl-out"] }
nalgebra = { version = "0.33", features = ["bytemuck"] }
nohash-hasher = "0.2.0"
noise = "0.9.0"
num-derive = "0.4"
num-traits = "0.2"
ordered-float = "4.2"
paste = "1.0"
petgraph = { version = "0.6", default-features = false, features = [
    "graphmap",
] }
ply-rs = "0.1"
pollster = "0.3"
rand = "0.8"
regex = "1.10"
rmp-serde = "1.1"
roots = "0.0.8"
serde = { version = "1.0", features = ["derive"] }
simba = "0.9"
tobj = "4.0"
wgpu = { version = "22.1", features = ["naga-ir"] }
winit = { version = "0.30" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dependencies.impact_ecs]
path = "impact_ecs"

[dependencies.impact_utils]
path = "impact_utils"

[dev-dependencies]
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5.1"
pprof = { version = "0.13", features = ["criterion", "flamegraph"] }
naga = { version = "22.1", features = ["wgsl-in", "wgsl-out"] }
proptest = "1.5"

[profile.release]
debug = "limited"

[[bench]]
name = "model"
harness = false
required-features = ["profiling"]

[[bench]]
name = "voxel"
harness = false
required-features = ["profiling"]
