[workspace]
members = [
    "crates/impact_alloc",
    "crates/impact_camera",
    "crates/impact_containers",
    "crates/impact_controller",
    "crates/impact_dev_ui",
    "crates/impact_ecs",
    "crates/impact_ecs/impact_ecs_macros",
    "crates/impact_geometry",
    "crates/impact_gpu",
    "crates/impact_io",
    "crates/impact_light",
    "crates/impact_log",
    "crates/impact_material",
    "crates/impact_math",
    "crates/impact_mesh",
    "crates/impact_model",
    "crates/impact_physics",
    "crates/impact_profiling",
    "crates/impact_rendering",
    "crates/impact_resource",
    "crates/impact_scene",
    "crates/impact_scheduling",
    "crates/impact_texture",
    "crates/impact_thread",
    "crates/impact_voxel",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
approx = "0.5"
arbitrary = { version = "1.4", features = ["derive"] }
bincode = { version = "2.0", default-features = false, features = [
    "std",
    "serde",
] }
bitflags = { version = "2.10", features = ["bytemuck"] }
bytemuck = { version = "1.24", features = ["derive"] }
cfg-if = "1.0"
clap = { version = "4.5", features = ["derive"] }
const-fnv1a-hash = "1.1"
inventory = "0.3"
nalgebra = "0.33"
nohash-hasher = "0.2"
num-traits = "0.2"
parking_lot = "0.12"
pastey = "0.2"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
simba = "0.9"
tinyvec = { version = "1.10", features = ["alloc"] }

[workspace.lints.rust]
future_incompatible = "warn"
missing_debug_implementations = "warn"
nonstandard_style = "warn"
rust_2018_idioms = "warn"
unexpected_cfgs = "warn"

[workspace.lints.clippy]
too_many_arguments = "allow"
let_and_return = "allow"
multiple_bound_locations = "allow"
too_long_first_doc_paragraph = "allow"
derivable_impls = "allow"
from_iter_instead_of_collect = "allow"

cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
cargo_common_metadata = "allow"

await_holding_lock = "warn"
box_collection = "warn"
cast_lossless = "warn"
char_lit_as_u8 = "warn"
checked_conversions = "warn"
dbg_macro = "warn"
debug_assert_with_mut_call = "warn"
doc_markdown = "warn"
empty_enum = "warn"
enum_glob_use = "warn"
exit = "warn"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
extend_with_drain = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp_const = "warn"
fn_params_excessive_bools = "warn"
if_let_mutex = "warn"
implicit_clone = "warn"
imprecise_flops = "warn"
inefficient_to_string = "warn"
invalid_upcast_comparisons = "warn"
large_digit_groups = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
let_unit_value = "warn"
linkedlist = "warn"
lossy_float_literal = "warn"
macro_use_imports = "warn"
manual_ok_or = "warn"
map_err_ignore = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
match_wild_err_arm = "warn"
match_wildcard_for_single_variants = "warn"
mem_forget = "warn"
missing_enforced_import_renames = "warn"
mut_mut = "warn"
mutex_integer = "warn"
needless_borrow = "warn"
needless_collect = "warn"
needless_continue = "warn"
needless_for_each = "warn"
option_option = "warn"
path_buf_push_overwrite = "warn"
ptr_as_ptr = "warn"
rc_mutex = "warn"
ref_option_ref = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_functions_in_if_condition = "warn"
semicolon_if_nothing_returned = "warn"
single_element_loop = "warn"
single_match_else = "warn"
string_add_assign = "warn"
string_add = "warn"
string_lit_as_bytes = "warn"
todo = "warn"
trait_duplication_in_bounds = "warn"
unimplemented = "warn"
unnecessary_to_owned = "warn"
unnested_or_patterns = "warn"
unused_self = "warn"
useless_transmute = "warn"
verbose_file_reads = "warn"
zero_sized_map_values = "warn"

[package]
name = "impact"
description = "A Rust game engine with physically based rendering, deformable voxel physics and Roc scripting"
readme = "README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
default = ["window"]
arbitrary = [
    "dep:arbitrary",
    "impact_controller/arbitrary",
    "impact_ecs/arbitrary",
    "impact_gpu/arbitrary",
    "impact_math/arbitrary",
    "impact_physics/arbitrary",
    "impact_rendering/arbitrary",
    "impact_texture/arbitrary",
    "impact_voxel/arbitrary",
]
checked_lock_order = []
roc_codegen = [
    "impact_containers/roc_codegen",
    "impact_controller/roc_codegen",
    "impact_camera/roc_codegen",
    "impact_ecs/roc_codegen",
    "impact_geometry/roc_codegen",
    "impact_light/roc_codegen",
    "impact_material/roc_codegen",
    "impact_math/roc_codegen",
    "impact_mesh/roc_codegen",
    "impact_model/roc_codegen",
    "impact_physics/roc_codegen",
    "impact_scene/roc_codegen",
    "impact_rendering/roc_codegen",
    "impact_texture/roc_codegen",
    "impact_voxel/roc_codegen",
    "roc_integration/roc_codegen",
]
cli = ["dep:clap"]
criterion = ["benchmark", "impact_profiling/criterion"]
egui = ["dep:egui", "dep:egui-wgpu", "dep:egui-winit", "window"]
ply = ["impact_mesh/ply"]
benchmark = []
obj = ["impact_mesh/obj"]
unchecked = ["impact_voxel/unchecked"]
tracy = ["impact_profiling/tracy"]
window = ["dep:winit", "impact_rendering/window"]

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
arbitrary = { workspace = true, optional = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
clap = { workspace = true, optional = true }
egui = { version = "0.33", optional = true }
egui-wgpu = { version = "0.33", optional = true }
egui-winit = { version = "0.33", optional = true }
impact_alloc = { path = "crates/impact_alloc" }
impact_camera = { path = "crates/impact_camera", features = ["ecs"] }
impact_containers = { path = "crates/impact_containers" }
impact_controller = { path = "crates/impact_controller", features = [
    "ecs",
    "serde",
] }
impact_ecs = { path = "crates/impact_ecs" }
impact_geometry = { path = "crates/impact_geometry", features = ["ecs"] }
impact_gpu = { path = "crates/impact_gpu", features = ["serde"] }
impact_io = { path = "crates/impact_io", features = ["ron"] }
impact_light = { path = "crates/impact_light", features = ["ecs", "serde"] }
impact_log = { path = "crates/impact_log" }
impact_material = { path = "crates/impact_material", features = [
    "ecs",
    "serde",
] }
impact_math = { path = "crates/impact_math", features = ["serde"] }
impact_mesh = { path = "crates/impact_mesh", features = ["ecs", "serde"] }
impact_model = { path = "crates/impact_model" }
impact_physics = { path = "crates/impact_physics", features = [
    "bincode",
    "ecs",
    "serde",
] }
impact_profiling = { path = "crates/impact_profiling" }
impact_rendering = { path = "crates/impact_rendering", features = ["serde"] }
impact_resource = { path = "crates/impact_resource" }
impact_scene = { path = "crates/impact_scene", features = ["ecs"] }
impact_scheduling = { path = "crates/impact_scheduling" }
impact_texture = { path = "crates/impact_texture", features = [
    "bincode",
    "serde",
] }
impact_thread = { path = "crates/impact_thread" }
impact_voxel = { path = "crates/impact_voxel", features = ["ecs", "ron"] }
inventory = { workspace = true }
nalgebra = { workspace = true, features = ["bytemuck", "serde-serialize"] }
nohash-hasher = { workspace = true }
num-traits = { workspace = true }
parking_lot = { workspace = true }
pastey = { workspace = true }
pollster = "0.4"
regex = "1.12"
roc_integration = { path = "../roc_integration" }
serde = { workspace = true }
tinyvec = { workspace = true }
winit = { version = "0.30", features = ["serde"], optional = true }

[profile.dev.package."regex"]
opt-level = 3
[profile.dev.package."zune-jpeg"]
opt-level = 3
[profile.dev.package."png"]
opt-level = 3
[profile.dev.package."ply-rs"]
opt-level = 3
[profile.dev.package."tobj"]
opt-level = 3

[lints]
workspace = true

[profile.release]
debug = true

[[bin]]
name = "impact"
path = "src/bin/impact.rs"
required-features = ["cli"]

[[bench]]
name = "model"
harness = false
required-features = ["criterion"]

[[bench]]
name = "voxel_object"
harness = false
required-features = ["criterion"]

[[bench]]
name = "generation"
harness = false
required-features = ["criterion"]

[[bench]]
name = "constraint"
harness = false
required-features = ["criterion"]

[[bench]]
name = "lookup_table"
harness = false
required-features = ["criterion"]
