[package]
name = "impact-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.impact]
path = ".."
features = ["fuzzing"]

[[bin]]
name = "voxel_object_generation"
path = "fuzz_targets/voxel_object_generation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "obtaining_voxels_within_sphere"
path = "fuzz_targets/obtaining_voxels_within_sphere.rs"
test = false
doc = false
bench = false

[[bin]]
name = "voxel_object_connected_regions"
path = "fuzz_targets/voxel_object_connected_regions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "split_off_disconnected_voxel_object_region"
path = "fuzz_targets/split_off_disconnected_voxel_object_region.rs"
test = false
doc = false
bench = false
