[package]
name = "impact_ecs"
version = "0.1.0"
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
const-fnv1a-hash = { workspace = true }
inventory = { workspace = true }
paste = { workspace = true }

impact_ecs_macros = { path = "impact_ecs_macros" }
impact_utils = { path = "../impact_utils" }

[lints]
workspace = true
