[workspace]
resolver = "2"
members = [
    "crates/roc_host",
    "crates/roc_host_lib",
    "crates/roc_host_bin",
    "crates/roc_impact",
    "crates/roc_io_error",
    "crates/roc_rosetta",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
bytemuck = "1.22"
impact = { path = ".." }
impact_utils = { path = "../impact_utils" }
roc_host = { path = "crates/roc_host" }
roc_impact = { path = "crates/roc_impact" }
roc_io_error = { path = "crates/roc_io_error" }
roc_rosetta = { path = "crates/roc_rosetta" }
libc = "=0.2.155"
roc_std = { git = "https://github.com/roc-lang/roc.git" }

[profile.release]
# lto = true
# strip = "debuginfo"
# You can comment this out if you hit a segmentation fault similar to the one in see issue github.com/roc-lang/roc/issues/6121
# Setting this to 1 should improve execution speed by making things easier to optimize for LLVM.
# codegen-units = 1
