[package]
name = "roc_codegen"
version = "0.1.0"
edition = { workspace = true }

[features]
enabled = ["roc_codegen_macros/enabled"]

[dependencies]
bytemuck = { workspace = true }
inventory = { workspace = true }
nalgebra = { workspace = true }

roc_codegen_macros = { path = "roc_codegen_macros" }

[lints]
workspace = true
