[package]
name = "impact_camera"
description = "Cameras for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
ecs = ["dep:impact_ecs"]
roc_codegen = ["roc_integration/roc_codegen"]

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
bytemuck = { workspace = true }
impact_containers = { path = "../impact_containers" }
impact_ecs = { path = "../impact_ecs", optional = true }
impact_geometry = { path = "../impact_geometry" }
impact_gpu = { path = "../impact_gpu" }
impact_math = { path = "../impact_math" }
inventory = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
roc_integration = { path = "../../../roc_integration" }

[lints]
workspace = true
