[package]
name = "impact_containers"
version = { workspace = true }
edition = { workspace = true }

[features]
roc_codegen = ["dep:inventory", "roc_integration/roc_codegen"]

[dependencies]
anyhow = { workspace = true }
atomic_enum = "0.3"
bytemuck = { workspace = true }
inventory = { workspace = true, optional = true }
nohash-hasher = { workspace = true }
rustc-hash = "2.1"

roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
